@startuml

title __GenericStream's Class Diagram__\n

    class Controller {
        ~ addToMyListButtonClick : EventHandler<ActionEvent>
        ~ backButtonClick : EventHandler<ActionEvent>
        ~ categoryButtonClick : EventHandler<ActionEvent>
        ~ createNewUserButtonClick : EventHandler<ActionEvent>
        ~ createUserButtonClick : EventHandler<ActionEvent>
        ~ episodeButtonClick : EventHandler<ActionEvent>
        ~ loginButtonClick : EventHandler<ActionEvent>
        ~ logoutButtonClick : EventHandler<ActionEvent>
        ~ mainStageCloser : EventHandler<WindowEvent>
        ~ movieButtonClick : EventHandler<ActionEvent>
        ~ myListButtonClick : EventHandler<ActionEvent>
        ~ okErrorButtonClick : EventHandler<ActionEvent>
        ~ playMovieButtonClick : EventHandler<ActionEvent>
        ~ playSeriesButtonClick : EventHandler<ActionEvent>
        ~ removeFromMyListButtonClick : EventHandler<ActionEvent>
        ~ resetButtonClick : EventHandler<ActionEvent>
        ~ searchFunction : EventHandler<KeyEvent>
        ~ seriesButtonClick : EventHandler<ActionEvent>
        + Controller()
    }
  

    class EpisodeButton {
        - episode : int
        - season : int
        + EpisodeButton()
        + getEpisode()
        + getSeason()
    }
  

    class Main {
        # createPasswordField : PasswordField
        # createRePasswordField : PasswordField
        # createUserNameField : TextField
        # passwordField : PasswordField
        # userNameField : TextField
        ~ searchField : TextField
        - categoryButtonContainer : VBox
        - contentContainer : VBox
        - errorMessageText : Text
        - movieButton : CheckBox
        - seriesButton : CheckBox
        - stages : ArrayList<Stage>
        + Main()
        {static} + main()
        + start()
        ~ closeSpecificStage()
        ~ createErrorStage()
        ~ createLoginStage()
        ~ createMainStage()
        ~ createPickEpisodeStage()
        ~ createUserCreationStage()
        ~ login()
        ~ logout()
        ~ resetFilters()
        ~ showError()
        ~ showPickEpisode()
        ~ showSpecificStage()
        ~ signUp()
        ~ signUpNU()
        ~ updateShownContent()
    }
  

    abstract class Media {
        # category : ArrayList<String>
        # inMyList : boolean
        # pictureFile : Image
        # rating : String
        # title : String
        + Media()
        {abstract} + display()
        + getCategories()
        + getPictureFile()
        + getRating()
        + getTitle()
    }
  

    class Model {
        + showingMyList : boolean
        - categoryFilter : List<String>
        - mediaTypeFilter : List<String>
        - mediaTypes : List<File>
        - newUserFile : File
        - presentCategories : ArrayList<String>
        - shownContent : ArrayList<Media>
        - totalContent : List<Media>
        - userFile : File
        - userFormat : Formatter
        - users : ArrayList<User>
        - validContent : List<Media>
        + Model()
        + addUser()
        + findSpecificMedia()
        + generateCategoryList()
        + getAllUser()
        + getCategoryList()
        + getCurrentUser()
        + getShownContent()
        + getUser()
        + loadContent()
        + login()
        + notShowCategory()
        + notShowMovies()
        + notShowSeries()
        + openFile()
        + resetFilters()
        + searchFor()
        + showCategory()
        + showMovies()
        + showMyList()
        + showSeries()
        + updateUserMylist()
        + updateUsers()
        + updateValidContent()
        ~ loadUsers()
        ~ logout()
    }
  

    class Movie {
        # movieFileLocation : File
        # releaseYear : String
        + Movie()
        + display()
    }
  

    class Series {
        # airTime : String
        # seasons : File[][]
        + Series()
        + display()
    }


    class User {
        # name : String
        # password : String
        ~ myList : HashMap<String, Media>
        + getName()
        + getPassword()
        ~ User()
    }
  

  Controller o-- Main : myMain
  Controller o-- Model : myModel
  EpisodeButton -up-|> javafx.scene.control.Button
  Main -up-|> javafx.application.Application
  Main o-- Controller : myController
  Main o-left- Model : myModel
  Model o-up- User : currentUser
  Movie -up-|> Media
  Series -up-|> Media
  Model -left-> Media
  Main -right-> EpisodeButton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
